Kinetic_Response_Issue_Update_V1 (2015-04-06)
* Initial version.  See README for details.

(2017-03-06)
* Changed the name of the info values to be more consistent with other handlers
* Added error handling choices