@@ -6,12 +6,14 @@ This handler updates an issue.
   The Issue's guid that will be updated.
     * The Issue Guid can be found at the end of the url of an issue.
         - ex: {{response_server}}/issues/{{issue_guid}}
-[Issue Name]
+[Name]
   The new name of the issue that will be updated.
-[Issue Description]
+[Description]
   The new description of the issue that will be updated.
-[Owner ID]
-  The ID of the new owner that will own this issue.
+[Owner Email]
+  The email of the new owner that will own this issue.
+[Tag List]
+  A comma separated list of tags to add to the new issue.
 
 === Results
 This handler does not return any results.
@@ -20,18 +22,9 @@ This handler does not return any results.
 Issue Guid:             abc123-the-issue-guid
 Issue Name:             Implementing Kinetic Request 2015 (new)
 Issue Description:      Updating this issue to reflect the new budget in 2015
-Owner ID:               23
+Owner Email:            user@acme.com
+Tag List:               tag 1,tag 2
 
 === Detailed Description
-This handler uses the Oauth client key and client secret
-to retrieve an access token that connects to the Kinetic Response
-API. It will then update the issue based on the parameters entered.
-
-=== How to Retrieve Application ID and Secret
-  1. Go to <response_server>/oauth/applications (ex: test.kineticdata.com/oauth/applications)
-       * must have admin access
-  2. Click on "New Application"
-       * Enter in a Name
-       * Enter in a redirect uri
-           - If running locally, use "urn:ietf:wg:oauth:2.0:oob"
-  3. On the next page, the Application ID and Secret will be presented
+This handler uses basic auth to connect and update the issue based on the 
+parameters entered.
